Resolve dropdown list display bug causing overflow beyond container

--- a/styles/components/_section.scss
+++ b/styles/components/_section.scss
@@ -284,30 +284,68 @@ section {
     }
   }
 
+  // Result views menu
   .indic-result-menu {
     img {
       width: 35px;
     }
+  
     .btn:focus {
       outline: 0;
       box-shadow: 0 0 0 0.15rem rgba(250, 89, 95, 0.33);
     }
+
+    #dropdown-indics-button {
+      width: 100%;
+      text-align: left;
+      padding: 0.8rem 1.5rem;
+      font-size: 1rem;
+      img {
+        border-left: 1px solid lighten($secondary, 25%);
+        padding-left: 1rem;
+      }
+    }
+
+    .dropdown-toggle {
+      &:hover {
+        background-color: darken($light-secondary, 2%);
+        color: $secondary;
+      }
+
+      &::before {
+        display: inline-block;
+        margin-right: 1em;
+        vertical-align: 0.255em;
+        content: "";
+        border-top: 0.3em solid;
+        border-right: 0.3em solid transparent;
+        border-bottom: 0;
+        border-left: 0.3em solid transparent;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+
     .dropdown-menu {
       border: 2px solid $light;
       border-radius: 1rem;
-    }
-
-    .global-view-item{
-      margin-left: 2.7rem;
-    }
-    .dropdown-item {
-      font-size: 0.8rem;
-      color: $primary;
-
-      &:hover,
-      &:focus,
-      &:active {
-        background-color: $bg-light;
+      overflow: hidden;
+  
+      .global-view-item {
+        padding-left: 3.8rem;
+      }
+  
+      .dropdown-item {
+        font-size: 0.8rem;
+        color: $primary;
+  
+        &:hover,
+        &:focus,
+        &:active {
+          background-color: $bg-light;
+        }
       }
     }
   }
